Implemented Device Manager
By following tutorial: https://devzone.nordicsemi.com/tutorials/15/

--- a/fw/pca10036/s132/armgcc/Makefile
+++ b/fw/pca10036/s132/armgcc/Makefile
@@ -54,6 +54,7 @@ $(SDK)/components/drivers_nrf/uart/nrf_drv_uart.c \
 $(SDK)/components/drivers_nrf/pstorage/pstorage.c \
 $(SDK)/examples/bsp/bsp.c \
 ../../../main.c \
+../../../device_manager_peripheral.c \
 $(SDK)/components/ble/common/ble_advdata.c \
 $(SDK)/components/ble/ble_advertising/ble_advertising.c \
 $(SDK)/components/ble/common/ble_conn_params.c \
@@ -75,6 +76,7 @@ INC_PATHS += -I$(SDK)/components/libraries/util
 INC_PATHS += -I$(SDK)/components/drivers_nrf/uart
 INC_PATHS += -I$(SDK)/components/ble/common
 INC_PATHS += -I$(SDK)/components/drivers_nrf/pstorage
+INC_PATHS += -I$(SDK)/components/drivers_nrf/pstorage/config
 INC_PATHS += -I$(SDK)/components/libraries/uart
 INC_PATHS += -I$(SDK)/components/device
 INC_PATHS += -I$(SDK)/components/libraries/button
@@ -88,6 +90,8 @@ INC_PATHS += -I$(SDK)/components/drivers_nrf/common
 INC_PATHS += -I$(SDK)/components/ble/ble_advertising
 INC_PATHS += -I$(SDK)/components/libraries/trace
 INC_PATHS += -I$(SDK)/components/softdevice/common/softdevice_handler
+INC_PATHS += -I$(SDK)/components/ble/device_manager
+INC_PATHS += -I$(SDK)/components/ble/device_manager/config
 
 OBJECT_DIRECTORY = _build
 LISTING_DIRECTORY = $(OBJECT_DIRECTORY)
