Add files and paths

--- a/fw/pca10036/s132/armgcc/Makefile
+++ b/fw/pca10036/s132/armgcc/Makefile
@@ -54,13 +54,16 @@ $(SDK)/components/drivers_nrf/uart/nrf_drv_uart.c \
 $(SDK)/components/drivers_nrf/pstorage/pstorage.c \
 $(SDK)/examples/bsp/bsp.c \
 ../../../main.c \
-$(SDK)/components/ble/device_manager/device_manager_peripheral.c \
 $(SDK)/components/ble/common/ble_advdata.c \
 $(SDK)/components/ble/ble_advertising/ble_advertising.c \
 $(SDK)/components/ble/common/ble_conn_params.c \
 $(SDK)/components/ble/common/ble_srv_common.c \
 $(SDK)/components/toolchain/system_nrf52.c \
 $(SDK)/components/softdevice/common/softdevice_handler/softdevice_handler.c \
+$(SDK)/components/ble/device_manager/device_manager_peripheral.c \
+$(SDK)/components/libraries/bootloader_dfu/bootloader_util.c \
+$(SDK)/components/libraries/bootloader_dfu/dfu_app_handler.c \
+$(SDK)/components/ble/ble_services/ble_dfu/ble_dfu.c \
 
 #assembly files common to all targets
 ASM_SOURCE_FILES  = $(SDK)/components/toolchain/gcc/gcc_startup_nrf52.s
@@ -92,6 +95,8 @@ INC_PATHS += -I$(SDK)/components/libraries/trace
 INC_PATHS += -I$(SDK)/components/softdevice/common/softdevice_handler
 INC_PATHS += -I$(SDK)/components/ble/device_manager
 INC_PATHS += -I$(SDK)/components/ble/device_manager/config
+INC_PATHS += -I$(SDK)/components/libraries/bootloader_dfu
+INC_PATHS += -I$(SDK)/components/ble/ble_services/ble_dfu
 
 OBJECT_DIRECTORY = _build
 LISTING_DIRECTORY = $(OBJECT_DIRECTORY)
