Add RuuviTag Rev.B1 board config

--- a/bootloader/ruuvitag_revb1/dual_bank_ble_s132/armgcc/Makefile
+++ b/bootloader/ruuvitag_revb1/dual_bank_ble_s132/armgcc/Makefile
@@ -67,6 +67,7 @@ $(SDK)/components/softdevice/common/softdevice_handler/softdevice_handler_appsh.
 ASM_SOURCE_FILES  = $(SDK)/components/toolchain/gcc/gcc_startup_nrf52.s
 
 #includes common to all targets
+INC_PATHS  = -I../../../..
 INC_PATHS  = -I../../../config
 INC_PATHS += -I$(SDK)/components/libraries/util
 INC_PATHS += -I$(SDK)/components/libraries/timer
@@ -99,7 +100,7 @@ BUILD_DIRECTORIES := $(sort $(OBJECT_DIRECTORY) $(OUTPUT_BINARY_DIRECTORY) $(LIS
 CFLAGS  = -DSWI_DISABLE0
 CFLAGS += -DSOFTDEVICE_PRESENT
 CFLAGS += -DNRF52
-CFLAGS += -DBOARD_PCA10036
+CFLAGS += -DBOARD_RUUVITAG_B1
 CFLAGS += -DBLE_STACK_SUPPORT_REQD
 CFLAGS += -DCONFIG_GPIO_AS_PINRESET
 CFLAGS += -D__HEAP_SIZE=0
