Better way to include custom board config...

--- a/bootloader/ruuvitag_b1/dual_bank_ble_s132/armgcc/Makefile
+++ b/bootloader/ruuvitag_b1/dual_bank_ble_s132/armgcc/Makefile
@@ -68,7 +68,7 @@ ASM_SOURCE_FILES  = $(SDK)/components/toolchain/gcc/gcc_startup_nrf52.s
 
 #includes common to all targets
 INC_PATHS  = -I../../../..
-INC_PATHS  = -I../../../config
+INC_PATHS += -I../../../config
 INC_PATHS += -I$(SDK)/components/libraries/util
 INC_PATHS += -I$(SDK)/components/libraries/timer
 INC_PATHS += -I$(SDK)/components/softdevice/s132/headers
@@ -100,6 +100,7 @@ BUILD_DIRECTORIES := $(sort $(OBJECT_DIRECTORY) $(OUTPUT_BINARY_DIRECTORY) $(LIS
 CFLAGS  = -DSWI_DISABLE0
 CFLAGS += -DSOFTDEVICE_PRESENT
 CFLAGS += -DNRF52
+CFLAGS += -DBOARD_CUSTOM
 CFLAGS += -DBOARD_RUUVITAG_B1
 CFLAGS += -DBLE_STACK_SUPPORT_REQD
 CFLAGS += -DCONFIG_GPIO_AS_PINRESET
@@ -129,7 +130,8 @@ ASMFLAGS += -x assembler-with-cpp
 ASMFLAGS += -DSWI_DISABLE0
 ASMFLAGS += -DSOFTDEVICE_PRESENT
 ASMFLAGS += -DNRF52
-ASMFLAGS += -DBOARD_PCA10036
+ASMFLAGS += -DBOARD_CUSTOM
+ASMFLAGS += -DBOARD_RUUVITAG_B1
 ASMFLAGS += -DBLE_STACK_SUPPORT_REQD
 ASMFLAGS += -DCONFIG_GPIO_AS_PINRESET
 ASMFLAGS += -D__HEAP_SIZE=0
