--- a/fw/ruuvitag_b1/s132/armgcc/Makefile
+++ b/fw/ruuvitag_b1/s132/armgcc/Makefile
@@ -70,7 +70,7 @@ ASM_SOURCE_FILES  = $(SDK)/components/toolchain/gcc/gcc_startup_nrf52.s
 
 #includes common to all targets
 INC_PATHS  = -I../../../..
-INC_PATHS  = -I../../../config
+INC_PATHS += -I../../../config
 INC_PATHS += -I$(SDK)/components/libraries/scheduler
 INC_PATHS += -I$(SDK)/components/drivers_nrf/config
 INC_PATHS += -I$(SDK)/examples/bsp
@@ -110,6 +110,7 @@ BUILD_DIRECTORIES := $(sort $(OBJECT_DIRECTORY) $(OUTPUT_BINARY_DIRECTORY) $(LIS
 CFLAGS  = -DSWI_DISABLE0
 CFLAGS += -DSOFTDEVICE_PRESENT
 CFLAGS += -DNRF52
+CFLAGS += -DBOARD_CUSTOM
 CFLAGS += -DBOARD_RUUVITAG_B1
 CFLAGS += -DCONFIG_GPIO_AS_PINRESET
 CFLAGS += -DS132
@@ -137,7 +138,8 @@ ASMFLAGS += -x assembler-with-cpp
 ASMFLAGS += -DSWI_DISABLE0
 ASMFLAGS += -DSOFTDEVICE_PRESENT
 ASMFLAGS += -DNRF52
-ASMFLAGS += -DBOARD_PCA10036
+ASMFLAGS += -DBOARD_CUSTOM
+ASMFLAGS += -DBOARD_RUUVITAG_B1
 ASMFLAGS += -DCONFIG_GPIO_AS_PINRESET
 ASMFLAGS += -DS132
 ASMFLAGS += -DBLE_STACK_SUPPORT_REQD
