--- a/fw/ruuvitag_b1/s132/armgcc/Makefile
+++ b/fw/ruuvitag_b1/s132/armgcc/Makefile
@@ -69,7 +69,7 @@ $(SDK)/components/ble/ble_services/ble_dfu/ble_dfu.c \
 ASM_SOURCE_FILES  = $(SDK)/components/toolchain/gcc/gcc_startup_nrf52.s
 
 #includes common to all targets
-INC_PATHS  = -I../../../..
+INC_PATHS  = -I../../../../board_configs
 INC_PATHS += -I../../../config
 INC_PATHS += -I$(SDK)/components/libraries/scheduler
 INC_PATHS += -I$(SDK)/components/drivers_nrf/config
