--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,47 @@
+# C++ objects and libs
+
+*.slo
+*.lo
+*.o
+*.a
+*.la
+*.lai
+*.so
+*.dll
+*.dylib
+
+# Qt-es
+
+/.qmake.cache
+/.qmake.stash
+*.pro.user
+*.pro.user.*
+*.qbs.user
+*.qbs.user.*
+*.moc
+moc_*.cpp
+qrc_*.cpp
+ui_*.h
+Makefile*
+*build-*
+
+# QtCreator
+
+*.autosave
+*.config
+*.creator
+*.creator.user
+*.files
+*.includes
+
+
+#QtCtreator Qml
+
+*.qmlproject.user
+*.qmlproject.user.*
+
+# Other ignores
+
 _build
 nRF52_SDK_0.9.2_dbc28c9
 *.zip
