Add sdk11 ignore

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,5 @@ ui_*.h
 _build
 nRF52_SDK_0.9.2_dbc28c9
 nRF52_SDK_0.9.2_dbc28c9.zip
+nRF5_SDK_11.0.0-2.alpha_bc3f6a0
+nRF5_SDK_11.0.0-2.alpha_bc3f6a0.zip
