Initial commit after porting

--- a/nfc_record_url_example_alpha11/ruuvitag_b2/armgcc/Makefile
+++ b/nfc_record_url_example_alpha11/ruuvitag_b2/armgcc/Makefile
@@ -4,7 +4,7 @@ export OUTPUT_FILENAME
 #MAKEFILE_NAME := $(CURDIR)/$(word $(words $(MAKEFILE_LIST)),$(MAKEFILE_LIST))
 MAKEFILE_NAME := $(MAKEFILE_LIST)
 MAKEFILE_DIR := $(dir $(MAKEFILE_NAME) ) 
-SDK = ../../../nRF5_SDK_11.0.0_89a8197
+SDK = ../../../nRF5_SDK_11.0.0-2.alpha_bc3f6a0
 
 TEMPLATE_PATH = $(SDK)/components/toolchain/gcc
 ifeq ($(OS),Windows_NT)
@@ -38,62 +38,57 @@ remduplicates = $(strip $(if $1,$(firstword $1) $(call remduplicates,$(filter-ou
 
 #source common to all targets
 C_SOURCE_FILES += \
+$(SDK)/components/drivers_ext/segger_rtt/RTT_Syscalls_GCC.c \
+$(SDK)/components/drivers_ext/segger_rtt/SEGGER_RTT.c \
+$(SDK)/components/drivers_ext/segger_rtt/SEGGER_RTT_printf.c \
 $(SDK)/components/libraries/util/app_error.c \
-$(SDK)/components/libraries/util/app_error_weak.c \
-$(SDK)/components/libraries/fifo/app_fifo.c \
 $(SDK)/components/libraries/trace/app_trace.c \
 $(SDK)/components/libraries/util/app_util_platform.c \
 $(SDK)/components/libraries/util/nrf_assert.c \
 $(SDK)/components/libraries/util/nrf_log.c \
 $(SDK)/components/libraries/uart/retarget.c \
-$(SDK)/components/libraries/uart/app_uart_fifo.c \
+$(SDK)/components/libraries/uart/app_uart.c \
 $(SDK)/components/drivers_nrf/clock/nrf_drv_clock.c \
 $(SDK)/components/drivers_nrf/common/nrf_drv_common.c \
 $(SDK)/components/drivers_nrf/uart/nrf_drv_uart.c \
-$(SDK)/components/drivers_nrf/nrf_soc_nosd/nrf_nvic.c \
 $(SDK)/components/drivers_nrf/nrf_soc_nosd/nrf_soc.c \
 ../../main.c \
-$(SDK)/external/segger_rtt/RTT_Syscalls_GCC.c \
-$(SDK)/external/segger_rtt/SEGGER_RTT.c \
-$(SDK)/external/segger_rtt/SEGGER_RTT_printf.c \
 $(SDK)/components/toolchain/system_nrf52.c \
-$(SDK)/components/nfc/t2t_lib/hal_t2t/hal_nfc_t2t.c \
-$(SDK)/components/nfc/ndef/generic/message/nfc_ndef_msg.c \
-$(SDK)/components/nfc/ndef/generic/record/nfc_ndef_record.c \
-$(SDK)/components/nfc/ndef/uri/nfc_uri_msg.c \
-$(SDK)/components/nfc/ndef/uri/nfc_uri_rec.c \
+$(SDK)/components/experimental_nfc/t2t_lib/hal_t2t/hal_nfc_t2t.c \
+$(SDK)/components/experimental_nfc/ndef/generic/message/nfc_ndef_msg.c \
+$(SDK)/components/experimental_nfc/ndef/generic/record/nfc_ndef_record.c \
+$(SDK)/components/experimental_nfc/ndef/uri/nfc_uri_msg.c \
+$(SDK)/components/experimental_nfc/ndef/uri/nfc_uri_rec.c \
 
 #assembly files common to all targets
 ASM_SOURCE_FILES  = $(SDK)/components/toolchain/gcc/gcc_startup_nrf52.s
 
 #assembly files common to all targets
-LIBS  = $(SDK)/components/nfc/t2t_lib/nfc_t2t_lib_gcc.a
+LIBS  = $(SDK)/components/experimental_nfc/t2t_lib/nfc_t2t_lib_gcc.a
 
 #includes common to all targets
 INC_PATHS  = -I../../../board_configs
 INC_PATHS += -I../../config
-INC_PATHS += -I$(SDK)/examples/bsp
+INC_PATHS += -I$(SDK)/components/toolchain/gcc
+INC_PATHS += -I$(SDK)/components/experimental_nfc/ndef/generic/record
+INC_PATHS += -I$(SDK)/components/drivers_nrf/nrf_soc_nosd
 INC_PATHS += -I$(SDK)/components/device
+INC_PATHS += -I$(SDK)/components/libraries/uart
 INC_PATHS += -I$(SDK)/components/drivers_nrf/hal
-INC_PATHS += -I$(SDK)/components/nfc/ndef/generic/record
-INC_PATHS += -I$(SDK)/components/toolchain/CMSIS/Include
+INC_PATHS += -I$(SDK)/components/experimental_nfc/ndef/generic/message
+INC_PATHS += -I$(SDK)/components/experimental_nfc/t2t_lib/hal_t2t
 INC_PATHS += -I../..
+INC_PATHS += -I$(SDK)/components/experimental_nfc/ndef/uri
 INC_PATHS += -I$(SDK)/components/libraries/util
 INC_PATHS += -I$(SDK)/components/drivers_nrf/uart
-INC_PATHS += -I$(SDK)/components/drivers_nrf/config
-INC_PATHS += -I$(SDK)/components/drivers_nrf/clock
-INC_PATHS += -I$(SDK)/components/drivers_nrf/nrf_soc_nosd
-INC_PATHS += -I$(SDK)/components/nfc/t2t_lib
-INC_PATHS += -I$(SDK)/components/nfc/t2t_lib/hal_t2t
-INC_PATHS += -I$(SDK)/components/libraries/trace
-INC_PATHS += -I$(SDK)/components/libraries/fifo
-INC_PATHS += -I$(SDK)/components/libraries/uart
-INC_PATHS += -I$(SDK)/components/nfc/ndef/generic/message
-INC_PATHS += -I$(SDK)/components/toolchain
-INC_PATHS += -I$(SDK)/components/nfc/ndef/uri
 INC_PATHS += -I$(SDK)/components/drivers_nrf/common
-INC_PATHS += -I$(SDK)/external/segger_rtt
-INC_PATHS += -I$(SDK)/components/toolchain/gcc
+INC_PATHS += -I$(SDK)/components/toolchain
+INC_PATHS += -I$(SDK)/components/drivers_ext/segger_rtt
+INC_PATHS += -I$(SDK)/components/drivers_nrf/config
+INC_PATHS += -I$(SDK)/components/experimental_nfc/t2t_lib
+INC_PATHS += -I$(SDK)/examples/bsp
+INC_PATHS += -I$(SDK)/components/libraries/trace
+INC_PATHS += -I$(SDK)/components/drivers_nrf/clock
 
 OBJECT_DIRECTORY = _build
 LISTING_DIRECTORY = $(OBJECT_DIRECTORY)
@@ -129,7 +124,8 @@ CFLAGS += -Wall -Werror -O3 -g3
 CFLAGS += -mfloat-abi=hard -mfpu=fpv4-sp-d16
 # keep every function in separate section. This will allow linker to dump unused functions
 CFLAGS += -ffunction-sections -fdata-sections -fno-strict-aliasing
-CFLAGS += -fno-builtin --short-enums 
+CFLAGS += -fno-builtin --short-enums
+
 # keep every function in separate section. This will allow linker to dump unused functions
 LDFLAGS += -Xlinker -Map=$(LISTING_DIRECTORY)/$(OUTPUT_FILENAME).map
 LDFLAGS += -mthumb -mabi=aapcs -L $(TEMPLATE_PATH) -T$(LINKER_SCRIPT)
@@ -162,19 +158,19 @@ ASMFLAGS += -DBOARD_CUSTOM
 ASMFLAGS += -DBOARD_RUUVITAG_B2
 ASMFLAGS += -DNRF52
 ASMFLAGS += -DBSP_DEFINES_ONLY
-
 #default target - first one defined
-default: clean ruuvitag_b2_nfc_record_url_example
+default: clean ruuvitag_b2_nfc_url_record_example
 
 #building all targets
 all: clean
 	$(NO_ECHO)$(MAKE) -f $(MAKEFILE_NAME) -C $(MAKEFILE_DIR) -e cleanobj
-	$(NO_ECHO)$(MAKE) -f $(MAKEFILE_NAME) -C $(MAKEFILE_DIR) -e ruuvitag_b2_nfc_record_url_example
+	$(NO_ECHO)$(MAKE) -f $(MAKEFILE_NAME) -C $(MAKEFILE_DIR) -e ruuvitag_b2_nfc_url_record_example
 
 #target for printing all targets
 help:
 	@echo following targets are available:
-	@echo 	ruuvitag_b2_nfc_record_url_example
+	@echo 	ruuvitag_b2_nfc_url_record_example
+
 
 C_SOURCE_FILE_NAMES = $(notdir $(C_SOURCE_FILES))
 C_PATHS = $(call remduplicates, $(dir $(C_SOURCE_FILES) ) )
@@ -189,12 +185,11 @@ vpath %.s $(ASM_PATHS)
 
 OBJECTS = $(C_OBJECTS) $(ASM_OBJECTS)
 
-ruuvitag_b2_nfc_record_url_example: OUTPUT_FILENAME := ruuvitag_b2_nfc_record_url_example
-ruuvitag_b2_nfc_record_url_example: LINKER_SCRIPT=nfc_url_record_gcc_nrf52.ld
-
-ruuvitag_b2_nfc_record_url_example: $(BUILD_DIRECTORIES) $(OBJECTS)
+ruuvitag_b2_nfc_url_record_example: OUTPUT_FILENAME := ruuvitag_b2_nfc_url_record_example
+ruuvitag_b2_nfc_url_record_example: LINKER_SCRIPT=nfc_url_record_gcc_nrf52.ld
+ruuvitag_b2_nfc_url_record_example: $(BUILD_DIRECTORIES) $(OBJECTS)
 	@echo Linking target: $(OUTPUT_FILENAME).out
-	$(NO_ECHO)$(CC) $(LDFLAGS) $(OBJECTS) $(LIBS) -lm -o $(OUTPUT_BINARY_DIRECTORY)/$(OUTPUT_FILENAME).out
+	$(NO_ECHO)$(CC) $(LDFLAGS) $(OBJECTS) $(LIBS) -o $(OUTPUT_BINARY_DIRECTORY)/$(OUTPUT_FILENAME).out
 	$(NO_ECHO)$(MAKE) -f $(MAKEFILE_NAME) -C $(MAKEFILE_DIR) -e finalize
 
 ## Create build directories
@@ -209,12 +204,16 @@ $(OBJECT_DIRECTORY)/%.o: %.c
 
 # Assemble files
 $(OBJECT_DIRECTORY)/%.o: %.s
-	@echo Assembly file: $(notdir $<)
+	@echo Compiling file: $(notdir $<)
 	$(NO_ECHO)$(CC) $(ASMFLAGS) $(INC_PATHS) -c -o $@ $<
+
+
 # Link
 $(OUTPUT_BINARY_DIRECTORY)/$(OUTPUT_FILENAME).out: $(BUILD_DIRECTORIES) $(OBJECTS)
 	@echo Linking target: $(OUTPUT_FILENAME).out
-	$(NO_ECHO)$(CC) $(LDFLAGS) $(OBJECTS) $(LIBS) -lm -o $(OUTPUT_BINARY_DIRECTORY)/$(OUTPUT_FILENAME).out
+	$(NO_ECHO)$(CC) $(LDFLAGS) $(OBJECTS) $(LIBS) -o $(OUTPUT_BINARY_DIRECTORY)/$(OUTPUT_FILENAME).out
+
+
 ## Create binary .bin file from the .out file
 $(OUTPUT_BINARY_DIRECTORY)/$(OUTPUT_FILENAME).bin: $(OUTPUT_BINARY_DIRECTORY)/$(OUTPUT_FILENAME).out
 	@echo Preparing: $(OUTPUT_FILENAME).bin
@@ -235,6 +234,7 @@ genbin:
 genhex: 
 	@echo Preparing: $(OUTPUT_FILENAME).hex
 	$(NO_ECHO)$(OBJCOPY) -O ihex $(OUTPUT_BINARY_DIRECTORY)/$(OUTPUT_FILENAME).out $(OUTPUT_BINARY_DIRECTORY)/$(OUTPUT_FILENAME).hex
+
 echosize:
 	-@echo ''
 	$(NO_ECHO)$(SIZE) $(OUTPUT_BINARY_DIRECTORY)/$(OUTPUT_FILENAME).out
@@ -245,9 +245,10 @@ clean:
 
 cleanobj:
 	$(RM) $(BUILD_DIRECTORIES)/*.o
-flash: ruuvitag_b2_nfc_record_url_example
+
+flash: $(MAKECMDGOALS)
 	@echo Flashing: $(OUTPUT_BINARY_DIRECTORY)/$<.hex
 	nrfjprog --program $(OUTPUT_BINARY_DIRECTORY)/$<.hex -f nrf52  --chiperase
-	nrfjprog --reset -f nrf52
+	nrfjprog --reset
 
 ## Flash softdevice
