Clean makefile output, add makefile support for b2 eddystone, update readme for DFU configuration

--- a/bootloader/ruuvitag_b2/dual_bank_ble_s132/armgcc/Makefile
+++ b/bootloader/ruuvitag_b2/dual_bank_ble_s132/armgcc/Makefile
@@ -17,11 +17,11 @@ MK := mkdir
 RM := rm -rf
 
 #echo suspend
-#ifeq ("$(VERBOSE)","1")
-#NO_ECHO := 
-#else
-#NO_ECHO := @
-#endif
+ifeq ("$(VERBOSE)","1")
+NO_ECHO := 
+else
+NO_ECHO := @
+endif
 
 # Toolchain commands
 CC              := '$(GNU_INSTALL_ROOT)/bin/$(GNU_PREFIX)-gcc'
